--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "3d-phone-carousel",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A simple, modern look 3D image carousel with IPhone frame, written with React",
   "author": "mahdi-g01",
   "license": "MIT",
-  "repository": "mahdi-g01/3d-phone-carousel",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mahdi-g01/3d-phone-carousel"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.tsx",
