--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-phone-carousel",
-  "version": "1.0.3",
+  "version": "1.0.34",
   "description": "A simple, modern look 3D image carousel with IPhone frame, written with React",
   "author": "mahdi-g01",
   "license": "MIT",
@@ -27,7 +27,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -55,17 +55,15 @@
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "^3.4.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "sass": "^1.70.0"
   },
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "sass": "^1.70.0"
-  },
   "keywords": [
     "3D", "carousel", "phone", "slider", "slideshow", "react"
   ]
